Bug Fix | Carousel | Increased visibility rules for >3 column carousels

--- a/src/modules/carousel/_style.scss
+++ b/src/modules/carousel/_style.scss
@@ -110,10 +110,32 @@
     }
 }
 .wsu-carousel[data-desktop-columns="5"] .wsu-carousel__wrapper,
-.wsu-carousel[data-desktop-columns="4"] .wsu-carousel__wrapper,
-.swiper-slide-active, .swiper-slide-next,.swiper-slide-next + .swiper-slide{
-    visibility: visible !important;
-    opacity: 100% !important;
+.wsu-carousel[data-desktop-columns="4"] .wsu-carousel__wrapper{
+    .swiper-slide-active, .swiper-slide-next,.swiper-slide-next + .swiper-slide {
+        visibility: visible !important;
+        opacity: 100% !important;
+    }
+}
+
+.wsu-carousel[data-desktop-columns="3"] .wsu-carousel__wrapper{
+    .swiper-slide-active, .swiper-slide-next, .swiper-slide-next + .swiper-slide {
+        visibility: visible !important;
+        opacity: 100% !important;
+    }
+}
+
+.wsu-carousel[data-desktop-columns="2"] .wsu-carousel__wrapper{
+    .swiper-slide-active, .swiper-slide-next {
+        visibility: visible !important;
+        opacity: 100% !important;
+    }
+}
+
+.wsu-carousel[data-desktop-columns="1"] .wsu-carousel__wrapper{
+    .swiper-slide-active {
+        visibility: visible !important;
+        opacity: 100% !important;
+    }
 }
 
 .swiper-button-prev{
